Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -4,16 +4,8 @@ description: "Документация по интеграции Finmar API"
 ---
 
 <Note>
-  В случае любых вопросов — обратитесь к менеджеру по интеграции в Telegram:
-
-  https://t.me/integrationVimapay
+  В случае любых вопросов — обратитесь к менеджеру по интеграции в Telegram: https://t.me/integrationVimapay
 </Note>
-
-<img
-  style={{ borderRadius:"0.5rem",width:"31%" }}
-  src="/images/payments.svg"
-  className="mx-auto"
-/>
 
 ## Фиатные платежи
 
