Documentation edits made through Mintlify web editor

--- a/products/applepay.mdx
+++ b/products/applepay.mdx
@@ -1,7 +1,8 @@
 ---
 title: "Apple Pay"
 icon: "cc-apple-pay"
-description: "Description of your new file."
+description: " "
+mode: "frame"
 ---
 
 
