--- a/products/card.mdx
+++ b/products/card.mdx
@@ -2,6 +2,7 @@
 title: "Банковские карты"
 description: "Приём оплаты банковскими картами"
 icon: "credit-card"
+mode: "frame"
 ---
 
 import Callback from '/snippets/callback.mdx';
