--- a/products/googlepay.mdx
+++ b/products/googlepay.mdx
@@ -1,7 +1,8 @@
 ---
 title: 'Google Pay'
-description: 'Description of your new file.'
+description: ' '
 icon: "google-pay"
+mode: "frame"
 ---
 
  
