--- a/products/index.mdx
+++ b/products/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Приём платежей"
-description: "Платёжный фрейм"
+description: "Finmar Chechout HPP"
+mode: "frame"
 ---
 
 ## Основные схемы взаимодействия
