--- a/products/widget.mdx
+++ b/products/widget.mdx
@@ -3,6 +3,7 @@ title: "Widget Integration"
 description: "Платежное решение для приема платежей с криптозеркалированием"
 icon: "dumpster-fire"
 tag: "BETA"
+mode: "frame"
 ---
 
 import TestCards from '/snippets/test-cards.mdx';
