--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -4,6 +4,10 @@ description: "Приём платежей"
 sidebarTitle: "Введение"
 ---
 
+Finmar предоставляет набор API, которые позволяют обрабатывать платежи и управлять ими. Наши API принимают и возвращают данные в формате JSON в теле HTTP-запроса, а также используют стандартные HTTP-коды ответов. Вы можете работать с API напрямую, используя любую предпочтительную HTTP/REST-библиотеку.
+фывыфвфывфыв
+asad
+
 <Note>
   Перед началом интеграции запросите имя пользователя и пароль для тестового окружения в чате интеграции
 </Note>
@@ -19,3 +23,4 @@ Basic Стандартная Basic HTTP authentication scheme (RFC 7617), доп
 ```
 Authorization: Basic base64(key:password)
 ```
+ 
