--- a/api-reference/endpoint/checkout.mdx
+++ b/api-reference/endpoint/checkout.mdx
@@ -3,6 +3,7 @@ title: "Создать платёж"
 description: "Получить ссылку на страницу оплаты"
 openapi: "POST /prepare2/api/v3/checkout"
 mode: "wide"
+playground: 'interactive'
 ---
 
 ## {title}
