--- a/snippets/callback.mdx
+++ b/snippets/callback.mdx
@@ -1,6 +1,6 @@
 Уведомления отправляются методом `POST Content-Type:"application/json"`
 
-<Note>
+<Warning>
   Для того, чтобы Ваш проект мог принимать колбеки следует обеспечить в проекте свободный (нефильтруемый) прием HTTP POST запросов с пула IP адресов:
 
   ```
@@ -8,7 +8,7 @@
   141.95.16.27
   163.172.116.59
   ```
-</Note>
+</Warning>
 
 ### Проверка подлинности уведомлений
 
@@ -533,3 +533,4 @@ server.listen(config.port, () => {
 ```
 
 </CodeGroup>
+    
