--- a/products/blik.mdx
+++ b/products/blik.mdx
@@ -27,156 +27,11 @@ sequenceDiagram
     Проект->>Finmar API: Подтверждение обработки операции
 ```
 
-<Steps>
-  <Step title="Выбор платежного виджета">
-    Клиент выбирает иконку платежного метода в интерфейсе сайта проекта
-  </Step>
-  <Step title="Передача данных для создания операции">
-    Сайт проекта отправляет в Finmar API реквизиты операции: данные клиента, сумму и валюту в фиате
+ <Note>
+  Перед началом интеграции запросите имя пользователя и пароль для тестового окружения в чате интеграции
+</Note>
 
-    <Accordion title="Пример запроса создания" icon="terminal">
-      ```bash Запрос создания операции
-      curl --location 'https://sandbox.finmar.tech/prepare2/api/v3/checkout' \
-      --header 'Content-Type: application/json' \
-      --header 'Authorization: Basic cHJldmlld190ZXN0OndkMzAxN2F6aW01aXNva3E=' \
-      --data-raw '{
-      "client_operation_id": "DSPn7pryR4QYBQpCGq",
-      "report_metadata": "DSPn7pryR4QYBQpCGq",
-      "payment_profile": "sandbox",
-      "method": "blik",
-      "project_id":"s002",
-      "amount": {
-          "amount": "100",
-          "currency": "EUR"
-      },
-      "user": {
-          "user_id": "u123",
-          "email": "globocheck@gmail.com",
-          "statistics": {
-              "registered_at": "2021-11-02",
-              "total_deposit_count": 485,
-              "total_withdrawal_count": 693
-          }
-      },
-      "url_callback": "https://finmar.requestcatcher.com/?callback",
-      "url_redirect_success": "https://finmar.requestcatcher.com?success",
-      "url_redirect_fail": "https://finmar.requestcatcher.com?fail"
-      }'
-      ```
-    </Accordion>
-  </Step>
-  <Step title="Получение платёжной страницы">
-    Finmar API создает уникальный URL и возвращает его сайту проекта
-
-    <Accordion title="Пример ответа" icon="server">
-      ```json
-      {
-      "success": true,
-      "result": {
-          "url": "https://card.cheipho.com/transaction/a32f658c-df98-4fc2-8bad-cbcf49aa8ee3",
-          "reference_id": "a32f658c-df98-4fc2-8bad-cbcf49aa8ee3"
-      },
-      "trace_id": "22c0f041f9b149f8b24ca9ce7df501fa"
-      }
-      ```
-    </Accordion>
-  </Step>
-  <Step title="Перенаправление клиента">
-    Сайт проекта автоматически перенаправляет клиента на сгенерированный платежный URL
-  </Step>
-  <Step title="Проведение операции">
-     Клиент совершает оплату.
-
-    При отладке на sandbox окружении используйте тестовые суммы `100.10`:
-
-  </Step>
-  <Step title="Уведомление о завершении операции">
-    Finmar API отправляет сайту проекта уведомление о завершении транзакции. Пример:
-
-    <Accordion title="Пример уведомления" icon="server">
-      ```json
-    {
-          "card": {
-            "charged": {
-              "amount": 17,
-              "currency": "EUR"
-            },
-            "initial": {
-              "amount": 17,
-              "currency": "EUR"
-            },
-            "card_info": null,
-            "oper_type": "deposit",
-            "initial_changed": false,
-            "requested_changed": false
-          },
-          "rates": {
-            "EUR-AUD": 1.7885761918160703,
-            "EUR-CAD": 1.629880760510181,
-            "EUR-USD": 1.154526436346
-          },
-          "result": "complete",
-          "deposit": {
-            "amount": 17,
-            "currency": "EUR"
-          },
-          "user_id": "00000000-0000-0000-0000-000000000000",
-          "reference_id": "00000000-0000-0000-0000-000000000000",
-          "current_status": "success",
-          "payment_product": "apm",
-          "client_operation_id": "1234567",
-          "payment_custom_data": {
-            "name": "acme_payment_method"
-          },
-          "payment_method_code": "999_acme",
-          "payment_method_type": "fiat"
-        }
-      ```
-
- 
-    </Accordion>
-  </Step>
-  <Step title="Обработка уведомления">
-   
-При обратного уведомления, наиболее значимые параметры:
-
-<ParamField path="user_id" type="string">
-  Идентификатор пользователя.
-</ParamField>
-
-<ParamField path="current_status" type="string">
-  Статус операции. `success`
-</ParamField>
-
-<ParamField path="reference_id" type="string">
-  Идентификатор операции на стороне сервиса.
-</ParamField>
-<ParamField path="client_operation_id" type="string">
-  Идентификатор операции вызвающей стороны. 
-</ParamField>
-<ParamField path="deposit.amount" type="string">
-  Сумма полученная от пользователя.
-</ParamField>
-<ParamField path="deposit.currency" type="string">
-Валюта операции.
-</ParamField>
-
-<ParamField path="payment_method_type" type="string">
-  Тип операции. `fiat`
-</ParamField>
-
-<ParamField path="payment_method_product" type="string">
-  Платёжный продукт. `apm`
-</ParamField>
-
-<ParamField path="payment_method_code" type="string">
-  Код пплатёжного метода. `999_acme`
-</ParamField>
-
-  </Step>
-
-  <Step title="Подтверждение обработки">
-  После успешной обработки операции, необходимо подтвердить её обработку, используя метод [/collector/api/v3/client_confirm_payment_by_reference_id](/api-reference/фиатные-платежи/подтвердить-операцию-по-reference_id)
-  </Step>
-
-</Steps>
+ <CardGroup cols={1}>
+   <Card title="Документация по интеграции" icon="book" horizontal href="api-reference/integration/">
+  </Card>  
+  </CardGroup>
