--- a/products/card.mdx
+++ b/products/card.mdx
@@ -5,9 +5,7 @@ icon: "credit-card"
 mode: "frame"
 ---
 
-import Callback from '/snippets/callback.mdx';
-import TestCards from '/snippets/test-cards.mdx';
-import Status from '/snippets/status.mdx';
+ 
 
 ## Общая схема работы
 
@@ -86,82 +84,17 @@ autonumber
     Ваш сервер периодически запрашивает у Finmart список неподтверждённых успешных операций (`GET /v3/operation/unconfirmed`). После получения и обработки этих операций, ваш сервер сообщает Finmart об успешной обработке (`POST /api/v3/operation/confirm`), обновляет баланс пользователя на вашем сайте и снова устанавливает `operation_ack_id` (`POST /api/operation/set_ack_id`) для предотвращения дублирования. Этот цикл повторяется для обработки всех новых успешных операций.
   </Step>
 </Steps>
-
-## Создание операции
-
-### 
-
-Оператор может как напрямую перенаправлять пользователя на страницу оплаты, так и открывать ее в iframe на сайте проекта, или открыть в новой вкладке.
-
-## Состояние операции
-
-Можно отслеживать состояние двумя способами:
-
-- Через обработку обратных уведомлений
-- Вызывая метод получения информации об операции
-
-<Status />
-
-## Обработка операции
-
-При обработке массива успешных операций, наиболее значимые параметры:
-
-<ParamField path="user_id" type="string">
-  Идентификатор пользователя
-</ParamField>
-
-<ParamField path="reference_id" type="string">
-  Идентификатор операции на стороне сервиса
-</ParamField>
-
-<ParamField path="complete_amount" type="string">
-  Сумма зачисления
-</ParamField>
-
-<ParamField path="complete_currency" type="string">
-  Валюта зачисления
-</ParamField>
-
-<ParamField path="payment_method_type" type="string">
-  Тип операции.
-</ParamField>
-
-<ParamField path="payment_method_product" type="string">
-  Платёжный продукт. `widget_card`
-</ParamField>
-
-<ParamField path="payment_method_product" type="string">
-  Платёжный продукт. `widget_card`
-</ParamField>
-
-## Обратные уведомления
+ 
 
 
-## Подтверждение операции
+ <Note>
+  Перед началом интеграции запросите имя пользователя и пароль для тестового окружения в чате интеграции
+</Note>
 
-После успешной обработки операции, необходимо подтвердить её обработку, используя метод [/collector/api/v3/client_confirm_payment_by_reference_id](https://sandbox.finmar.tech/collector/api/v3/client_confirm_payment_by_reference_id)
+ <CardGroup cols={1}>
+   <Card title="Документация по интеграции" icon="book" horizontal href="/api-reference/introduction">
+  </Card>  
+</CardGroup>
 
-## Тестовые карты
 
-<TestCards />
-
-## Проверка интеграции
-
-- **Передача параметров**:
-  - Статистика пользователя.
-  - Информация о KYC
-  - Альтернативные суммы платежа 
-- **Обработка ошибок**:
-  - `MAINTENANCE`и `FAST_DECLINE`
-  - `INSUFFICIENT_FUNDS` нехватка средств (не считать ошибкой)
-- **Идемпотентность операций** (избежать двойных начислений)
-- **Обработка колбеков**: 
-  - Проверка подписи
-- **Сопоставление идентификаторов:**
-  - client_operation_id соответствует идентификаторам оператора, с которыми обращаются в поддержку
-  - reference_id сохраняется на стороне оператора
-- **Подтверждение обработки операции**
-- **Интервальный запрос неподтверждённых успешных операций**
-- **Работа с возвратами**
-- **Корректировка статусов**
-- **Сверка**
+ 
