--- a/products/openbanking.mdx
+++ b/products/openbanking.mdx
@@ -5,9 +5,7 @@ icon: "money-bill-transfer"
 mode: "frame"
 ---
  
-
-import Callback from '/snippets/callback.mdx';
-
+ 
 ## Общая схема работы
 
 ```mermaid
@@ -24,198 +22,16 @@ sequenceDiagram
     Проект->>Проект: Обработка уведомления
     Проект->>Finmar API: Подтверждение обработки операции
 ```
-
-<Steps>
-  <Step title="Выбор платежного виджета">
-    Клиент выбирает платёжный метод в интерфейсе сайта проекта.
-  </Step>
-  <Step title="Передача данных для создания операции">
-    Сайт проекта отправляет в Finmar API данные требуемые для создания операции.
-
-  
-  </Step>
-  <Step title="Получение платёжной страницы">
-    Finmar API создает уникальный URL и возвращает его сайту проекта.
-
  
-  </Step>
-  <Step title="Перенаправление клиента">
-    Сайт проекта автоматически перенаправляет клиента на сгенерированный платежный URL
-  </Step>
-  <Step title="Проведение операции">
-    Клиент выбирает банк в списке банков, подтверждает оплату и перенаправляется на url_redirect_success или url_redirect_fail
-    При отладке на sandbox окружении используйте тестовые суммы `100.10`:
-
-  </Step>
-  <Step title="Уведомление о завершении операции">
-    Finmar API отправляет сайту проекта уведомление о завершении транзакции. 
-  </Step>
-
-  <Step title="Обработка уведомления">
-Проект выполняет обработку обратного уведомления.
-
-  </Step>
-
-  <Step title="Подтверждение обработки">
-  После успешной обработки операции, необходимо подтвердить её обработку, используя методы [/collector/api/v3/client_confirm_payment_by_reference_id](/api-reference/фиатные-платежи/подтвердить-операцию-по-reference_id) или 
-  [/collector/api/v3/client_confirm_payment_by_client_operation_id](/api-reference/фиатные-платежи/подтвердить-операцию-по-client_operation_id)
-  </Step>
-
-</Steps>
-
-## Получение платёжной страницы
-### Пример запроса
-
-   ```bash Запрос создания операции
-      curl --location 'https://sandbox.finmar.tech/prepare2/api/v3/checkout' \
-      --header 'Content-Type: application/json' \
-      --header 'Authorization: Basic cHJldmlld190ZXN0OndkMzAxN2F6aW01aXNva3E=' \
-      --data-raw '{
-      "client_operation_id": "DSPn7pryR4QYBQpCGq",
-      "report_metadata": "DSPn7pryR4QYBQpCGq",
-      "payment_profile": "sandbox",
-      "method": "openbanking",
-      "project_id":"s002",
-      "amount": {
-          "amount": "100",
-          "currency": "EUR"
-      },
-      "user": {
-          "user_id": "u123",
-          "email": "globocheck@gmail.com",
-          "statistics": {
-              "registered_at": "2021-11-02",
-              "total_deposit_count": 485,
-              "total_withdrawal_count": 693
-          }
-      },
-      "url_callback": "https://finmar.requestcatcher.com/?callback",
-      "url_redirect_success": "https://finmar.requestcatcher.com?success",
-      "url_redirect_fail": "https://finmar.requestcatcher.com?fail"
-      }'
-```
-
-### Пример ответа
-     
-  ```json
-    {
-    "success": true,
-    "result": {
-        "url": "https://crypto.cheipho.com/payment-front/76b6a829-a186-4dac-bfc2-17092882fc17",
-        "reference_id": "584cc07e-c402-4b1b-8f87-8aa51c567dd8"
-    },
-    "trace_id": "9d560b7391224345b68a0ae38244013c"
-}
-```
-
-## Обратные уведомления
-<Callback/>
-  
-### Пример уведомления об успешной операции:
  
-```json
-         {
-            "reference_id": "584cc07e-c402-4b1b-8f87-8aa51c567dd8",
-            "client_operation_id": "gXWCmoB379YxA0kiN4",
-            "result": "complete",
-            "deposit": {
-                "amount": 20.0,
-                "currency": "EUR"
-            },
-            "meta": {
-                "user": {
-                    "email": "globocheck.kyc@gmail.com",
-                    "user_id": "u123",
-                    "email_verified": true
-                },
-                "amount": {
-                    "amount": "20",
-                    "currency": "EUR"
-                },
-                "method": "openbanking",
-                "url_callback": "https://webhook-test.com/d6357ae34082392a5d35200dbf994b30",
-                "payment_profile": "sandbox",
-                "url_redirect_fail": "https://finmar.requestcatcher.com?fail",
-                "client_operation_id": "gXWCmoB379YxA0kiN4",
-                "url_redirect_success": "https://finmar.requestcatcher.com?success"
-            },
-            "card": {
-                "oper_type": "deposit",
-                "bank_name": "",
-                "iban": "",
-                "initial": {
-                    "amount": 20.0,
-                    "currency": "EUR"
-                },
-                "charged": {
-                    "amount": 20.0,
-                    "currency": "EUR"
-                },
-                "initial_changed": false,
-                "requested_changed": false,
-                "card_info": null
-            },
-            "rates": {
-                "EUR-RUB": 91.20875909217102,
-                "EUR-USD": 1.156681803776
-            },
-            "payment_custom_data": {
-                "name": "test_openbanking"
-            },
-            "user_id": "u123",
-            "current_status": "success",
-            "payment_product": "apm",
-            "payment_method_type": "fiat",
-            "payment_method_code": "000_test_openbanking"
-        }
-  ```
-  
-## Обработка операции
+ <Note>
+  Перед началом интеграции запросите имя пользователя и пароль для тестового окружения в чате интеграции
+</Note>
 
-<ParamField path="user_id" type="string">
-  Идентификатор пользователя.
-</ParamField>
+ <CardGroup cols={1}>
+   <Card title="Документация по интеграции" icon="book" horizontal href="api-reference/integration/checkout#openbanking">
+  </Card>  
 
-<ParamField path="current_status" type="string">
-  Статус операции. `success`
-</ParamField>
+</CardGroup>
 
-<ParamField path="reference_id" type="string">
-  Идентификатор операции на стороне сервиса.
-</ParamField>
-<ParamField path="client_operation_id" type="string">
-  Идентификатор операции вызвающей стороны. 
-</ParamField>
-<ParamField path="deposit.amount" type="string">
-  Сумма полученная от пользователя.
-</ParamField>
-<ParamField path="deposit.currency" type="string">
-Валюта операции.
-</ParamField>
-
-<ParamField path="payment_method_type" type="string">
-  Тип операции. 
-</ParamField>
-
-<ParamField path="payment_method_product" type="string">
-  Платёжный продукт.
-</ParamField>
-
-<ParamField path="payment_method_code" type="string">
-  Код пплатёжного метода.
-</ParamField>
-
-
-## Подтверждение обработки операции
-
-  После успешной обработки операции, необходимо подтвердить её обработку, используя методы [/collector/api/v3/client_confirm_payment_by_reference_id](/api-reference/фиатные-платежи/подтвердить-операцию-по-reference_id) или 
-  [/collector/api/v3/client_confirm_payment_by_client_operation_id](/api-reference/фиатные-платежи/подтвердить-операцию-по-client_operation_id)
-
- ```bash Подтверждение операции
-   
- curl --location 'https://sandbox.finmar.tech/collector/api/v3/client_confirm_success_payment_by_reference_id' \
---data '{
-    "reference_id": "2390adbd-2c5b-4022-b62f-5245478a2584"
-}'
-```
 
