--- a/api-reference/go-live-checklist.mdx
+++ b/api-reference/go-live-checklist.mdx
@@ -1,10 +1,10 @@
 ---
 title: 'Проверка интеграции'
-description: 'Проверка интеграции'
+description: ' '
 ---
 
 
-## Проверка интеграции
+ 
 
 - **Передача параметров**:
   - Статистика пользователя.
