--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,23 +1,16 @@
 ---
 title: "Введение"
-description: "Приём платежей"
+description: " "
 sidebarTitle: "Введение"
 ---
-
-Finmar предоставляет набор API, которые позволяют обрабатывать платежи и управлять ими. Наши API принимают и возвращают данные в формате JSON в теле HTTP-запроса, а также используют стандартные HTTP-коды ответов. Вы можете работать с API напрямую, используя любую предпочтительную HTTP/REST-библиотеку.
-фывыфвфывфыв
-asad
-
+ 
 <Note>
   Перед началом интеграции запросите имя пользователя и пароль для тестового окружения в чате интеграции
 </Note>
 
-## Приём платежей
 
 ## Аутентификация
-
 Basic Стандартная Basic HTTP authentication scheme (RFC 7617), дополнительная проверка подлинности отправителя запроса не выполняется - учетные данные полностью передаются в запросе. Эта схема предназначена для ускорения процесса интеграции.
-
 Для клиента создается пара key + password, которые он передает в заголовке `Authorization`:
 
 ```
