--- a/api-reference/status.mdx
+++ b/api-reference/status.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Статусная модель"
-description: "Статусная модель операции."
+description: " "
 ---
 
 import Status from '/snippets/status.mdx';
