--- a/products/blik.mdx
+++ b/products/blik.mdx
@@ -4,10 +4,6 @@ description: ' '
 icon: 'mobile-button'
 mode: "frame"
 ---
-
-
-
-
  
  
 ## Общая схема работы
@@ -32,6 +28,5 @@ sequenceDiagram
 </Note>
 
  <CardGroup cols={1}>
-   <Card title="Документация по интеграции" icon="book" horizontal href="api-reference/integration/">
-  </Card>  
+   <Card title="Документация по интеграции" icon="book" horizontal href="api-reference/integration/"> </Card>  
   </CardGroup>
