--- a/products/card.mdx
+++ b/products/card.mdx
@@ -4,6 +4,7 @@ description: "Приём оплаты банковскими картами"
 icon: "credit-card"
 mode: "frame"
 ---
+import TestCards from '/snippets/test-cards.mdx';
 
  
 
@@ -85,7 +86,7 @@ autonumber
   </Step>
 </Steps>
  
-
+ <TestCards />
 
  <Note>
   Перед началом интеграции запросите имя пользователя и пароль для тестового окружения в чате интеграции
