--- a/api-reference/integration/checkout.mdx
+++ b/api-reference/integration/checkout.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Создание операции"
 description: " "
-sidebarTitle: "Создание операции"
+sidebarTitle: "1. Создание операции"
 ---
 import TestCards from '/snippets/test-cards.mdx';
 
