--- a/api-reference/integration/redirect_to_url.mdx
+++ b/api-reference/integration/redirect_to_url.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Перенаправление пользователя на платёжную страницу"
 description: " "
-sidebarTitle: "Перенаправление пользователя на платёжную страницу"
+sidebarTitle: "2. Перенаправление пользователя"
 ---
 
 В ответ на запрос создания, вы получите ответ вида: 
