--- a/api-reference/integration/callbacks.mdx
+++ b/api-reference/integration/callbacks.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Обратные уведомления"
 description: ""
-sidebarTitle: "Обратные уведомления"
+sidebarTitle: "3. Обратные уведомления"
 ---
 
  
